--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "autoprefixer": "^10.3.1",
         "axios": "^0.21",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14",
+        "postcss": "^8.3.5",
+        "tailwindcss": "^2.2.4",
         "vue-loader": "^15.9.7",
         "vue-template-compiler": "^2.6.14"
     },
